# solidgen

./: README.md  pyproject.toml
src/solidgen/: __init__.py  format.py  logger.py  scaffold.py  tsx.py  types.py
src/solidgen/templates/: __init__.py  base.py  component.py  page.py
