[project]
name = "solidgen"
version = "0.1.0"
description = "A cli tool for scaffolding SolidJS components and pages."
readme = "README.md"
authors = [
    { name = "Abdalrzag Eisa", email = "53495583+mesalilac@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["click>=8.3.1"]

[project.scripts]
solidgen = "solidgen:cli"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
